fix: added exports into index.js

--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "constructs": "^10.0.5"
   },
   "keywords": [
+    "Cloudwan",
     "IPAM",
+    "NetworkFirewall",
     "VPC",
     "cdk"
   ],
