--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk-lib": "2.50.0",
+    "aws-cdk-lib": "2.67.0",
     "constructs": "10.0.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -60,8 +60,11 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.50.0",
+    "aws-cdk-lib": "^2.67.0",
     "constructs": "^10.0.5"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-redshift-alpha": "^2.67.0-alpha.0"
   },
   "keywords": [
     "Cloudwan",
