--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-cdk/aws-redshift-alpha": "2.67.0-alpha.0",
     "@types/jest": "^27",
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -60,16 +61,22 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-redshift-alpha": "2.67.0-alpha.0",
     "aws-cdk-lib": "^2.67.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-redshift-alpha": "^2.67.0-alpha.0"
+    "@aws-cdk/aws-redshift-alpha": "2.67.0-alpha.0"
   },
   "keywords": [
     "Cloudwan",
+    "CrowdStrike",
+    "DNS",
     "IPAM",
     "NetworkFirewall",
+    "Redshift",
+    "SSM",
+    "Security",
     "VPC",
     "cdk"
   ],
